More soil NO emissions

--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -281,7 +281,39 @@ of reactive nitrogen (hereafter \Ndep), and a pulse factor, \Fp. For this work w
 
 where the flux terms have units \ngN. The calculations of \Fb, \Ff, \Fd and \Fp are detailed in \citep{SimpsonDarras2021}.
 
-An important issue arose during the construction .... TO BE CONTINUED!!!!
+An important issue arose during the construction ....
+Within the LRTAP Convention,
+most countries mainly report NOx emissions due to agricultural activities
+using the EMEP/EEA Emissions Inventory Guidebook
+\citep{Guidebook2019:3D}. The Guidebook provides methods for calculating
+soil-NO data from fertilizer and other inputs.
+
+Table~\ref{tab:GB2019} presents the main sources for which
+ soil NO emissions ares covered by the Guidebook, and
+Table~\ref{tab:Res2015} presents the nationally
+submitted emissions following this system (data
+provided by Sabine Schindlbacher, EMEP CEIP, 2021).
+It can be seen that for the vast majority of countries
+the main emission categories are 3Da1,3Da2a-c,and
+3Da3. These are all roughly equivalent to
+the `Fert' emissions from CAMS-GLOB-SOIL.
+
+When using EMEP emissions derived from
+officially reported data (with soil NO emissions as given in GNFR L),
+for example in EMEP MSC-W reporting runs, retain the
+official GNFR L data, but
+ but add biome, N-dep and pulse emissions from CAMS-GLOB-SOIL.
+
+
+\citet{SimpsonDarras:2021} discuss these double-counting issues for
+ECLIPSE v5 and v6 inventories, and for CAMS-GLOB and CAMS-REG. In
+some cases the CAMS-GLOB-SOIL \Nfert emissions should be used, but
+in other cases not. In the EMEP model this ....
+
+
+
+ TO BE CONTINUED!!!!
+
 
 
 \subsection{DMS emissions}
