Update on Overleaf.

--- a/RefsEmis.bib
+++ b/RefsEmis.bib
@@ -301,3 +301,61 @@ note = {European Commission, Joint Research Centre (JRC)}
   year = 2020,
   note = {EMEP Technical Report MSC-W 4/2020, ISSN 1504-6206}
 }
+
+@article{Nightingale2000,
+  author =        {Nightingale, PD and Malin, G and Law, CS and
+                   Watson, AJ and Liss, PS and Liddicoat, MI and
+                   Boutin, J and Upstill-Goddard, RC},
+  journal =       {Global Biogeochem. Cycles},
+  month =         {{MAR}},
+  number =        {{1}},
+  pages =         {{373-387}},
+  title =         {{In situ evaluation of air-sea gas exchange
+                   parameterizations using novel conservative and
+                   volatile tracers}},
+  volume =        {{14}},
+  year =          {{2000}},
+  abstract =      {{Measurements of air-sea gas exchange rates are
+                   reported from two deliberate tracer experiments in
+                   the southern North Sea during February 1992 and 1993.
+                   A conservative tracer, spores of the bacterium
+                   Bacillus globigii var. Niger, was used for the first
+                   time in an in situ air-sea gas exchange experiment.
+                   This nonvolatile tracer is used to correct for
+                   dispersive dilution of the volatile tracers and
+                   allows three estimations of the transfer velocity for
+                   the same time period. The first estimation of the
+                   power dependence of gas transfer on molecular
+                   diffusivity in the marine environment is reported.
+                   This allows the impact of bubbles on estimates of the
+                   transfer velocity derived from changes in the
+                   helium/sulphur hexafluoride ratio to be assessed.
+                   Data from earlier dual tracer experiments are
+                   reinterpreted, and findings suggest that results from
+                   all dual tracer experiments are mutually consistent.
+                   The complete data set is used to test published
+                   parameterizations of gas transfer with wind speed. A
+                   gas exchange relationship that shows a dependence on
+                   wind speed intermediate between those of Liss and
+                   Merlivat {[}1986] and Wanninkhof {[}1992] is found to
+                   be optimal. The dual tracer data are shown to be
+                   reasonably consistent with global estimates of gas
+                   exchange based on the uptake of natural and
+                   bomb-derived radiocarbon. The degree of scatter in
+                   the data when plotted against wind speed suggests
+                   that parameters not scaling with wind speed are also
+                   influencing gas exchange rates.}},
+  doi =           {10.1029/1999GB900091},
+  issn =          {{0886-6236}},
+}
+
+@article{Wanninkhof2014,
+  author =        {Wanninkhof, R.},
+  journal =       {Limnol. Oceanogr. Methods},
+  pages =         {351–-362},
+  title =         {Relationship between wind speed and gas exchange over
+                   the ocean revisited},
+  volume =        {12},
+  year =          {2014},
+  doi =           {10.4319/lom.2014.12.351},
+}
