--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -271,7 +271,7 @@ At each location and timestep, the model calculates the Schmidt number ($Sc$) fr
 $Sc=2855.7 -177.63\  SST + 6.0438\  SST^2 - 0.11645\  SST^3 + 0.00094743\ SST^4$ 
 \\
 \\
-The transfer velocity $K_{w}$ (given in cm hour$^{-1}$) is then calculated with the formula of \citet{Nightingale2000}, from the Schmidt number and the 10-meter wind speed $u_{10}$ (given in \ms):
+The transfer velocity $K_{w}$ (given in cm hour$^{-1}$) is then calculated with the formula of \citet{Nightingale2000}, from the Schmidt number and the 10-meter wind speed $u_{10}$ (given in m~s$^{-1}$):
 \\
 \\
 $K_w=(0.222\  u_{10}^2 +0.333\ u_{10}) \sqrt{\frac{600}{Sc}} $
@@ -394,4 +394,4 @@ Something on pollen perhaps? -- Alvaro??
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,EMEP_Reports,uEMEP}
+\bibliography{Refs,EMEP_Reports,uEMEP,REf}
