Update on Overleaf.

--- a/RefsEmis.bib
+++ b/RefsEmis.bib
@@ -302,6 +302,74 @@ note = {European Commission, Joint Research Centre (JRC)}
   note = {EMEP Technical Report MSC-W 4/2020, ISSN 1504-6206}
 }
 
+@misc{GranierCAMS2019,
+  author =        {Granier, C. and Darras, S. and Denier van der Gon, H. and
+                   Doubalova, J. and Elguindi, N. and Galle, B. and
+                   Gauss, M. and Guevara, M. and Jalkanen, J.-P. and
+                   Kuenen, J. and Liousse, C. and Quack, B. and
+                   Simpson, D. and Sindelarova, K.},
+  title =         {The Copernicus Atmosphere Monitoring Service global
+                   and regional emissions (April 2019 version)},
+  year =          {2019},
+  doi =           {10.24380/d0bn-kx16},
+  url =           {https://atmosphere.copernicus.eu/sites/default/files/2019-
+                  06/cams_emissions_general_document_apr2019_v7.pdf},
+}
+
+@article{Lana2011,
+  author =        {Lana, A. and Bell, T. G. and Simo, R. and
+                   Vallina, S. M. and Ballabrera-Poy, J. and
+                   Kettle, A. J. and Dachs, J. and Bopp, L. and
+                   Saltzman, E. S. and Stefels, J. and Johnson, J. E. and
+                   Liss, P. S.},
+  journal =       {Global Biogeochem. Cycles},
+  month =         {{JAN 29}},
+  title =         {{An updated climatology of surface dimethlysulfide
+                   concentrations and emission fluxes in the global
+                   ocean}},
+  volume =        {{25}},
+  year =          {{2011}},
+  abstract =      {{The potentially significant role of the biogenic
+                   trace gas dimethylsulfide (DMS) in determining the
+                   Earth's radiation budget makes it necessary to
+                   accurately reproduce seawater DMS distribution and
+                   quantify its global flux across the sea/air
+                   interface. Following a threefold increase of data
+                   (from 15,000 to over 47,000) in the global surface
+                   ocean DMS database over the last decade, new global
+                   monthly climatologies of surface ocean DMS
+                   concentration and sea-to-air emission flux are
+                   presented as updates of those constructed 10 years
+                   ago. Interpolation/extrapolation techniques were
+                   applied to project the discrete concentration data
+                   onto a first guess field based on Longhurst's
+                   biogeographic provinces. Further objective analysis
+                   allowed us to obtain the final monthly maps. The new
+                   climatology projects DMS concentrations typically in
+                   the range of 1-7 nM, with higher levels occurring in
+                   the high latitudes, and with a general trend toward
+                   increasing concentration in summer. The increased
+                   size and distribution of the observations in the DMS
+                   database have produced in the new climatology
+                   substantially lower DMS concentrations in the polar
+                   latitudes and generally higher DMS concentrations in
+                   regions that were severely undersampled 10 years ago,
+                   such as the southern Indian Ocean. Using the new DMS
+                   concentration climatology in conjunction with
+                   state-of-the-art parameterizations for the sea/air
+                   gas transfer velocity and climatological wind fields,
+                   we estimate that 28.1 (17.6-34.4) Tg of sulfur are
+                   transferred from the oceans into the atmosphere
+                   annually in the form of DMS. This represents a global
+                   emission increase of 17\% with respect to the
+                   equivalent calculation using the previous
+                   climatology. This new DMS climatology represents a
+                   valuable tool for atmospheric chemistry, climate, and
+                   Earth System models.}},
+  doi =           {10.1029/2010GB003850},
+  issn =          {{0886-6236}},
+}
+
 @article{Nightingale2000,
   author =        {Nightingale, PD and Malin, G and Law, CS and
                    Watson, AJ and Liss, PS and Liddicoat, MI and
