--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -16,7 +16,7 @@ The meteorological data to drive the EMEP MSC-W air quality model have been gene
 
 \subsection{Temperature and precipitation}
 The global mean temperature in 2019 was reported by the World Meteorological Organisation \citep{WMO1248:2020} as the second or third highest on record. In Europe, the annual mean temperature for 2019 was the highest on record according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-temperature}} and October 2018 to September 2019 was the second warmest over land north of 60\degrees N since records began in 1900 (Arctic Report Card 2019 \citep{Overland:ARC2019}.
-Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and in Europe, according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-wet-and-dry-conditions}} and BAMS (Regional climates 2019), the average annual precipitation total was close to normal.
+Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula and Latvia, 2019 was overall a normal year in much of Europe according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-wet-and-dry-conditions}} and BAMS (Regional climates 2019).
 
 \begin{figure*}[h]
   \centering
@@ -26,10 +26,8 @@ Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2
 \label{fig:metyear-avMET}
 \end{figure*}
 
-Compared to the 2000-2018 average, higher temperatures in 2019 are clearly seen in Figure~\ref{fig:metyear-avMET} a) over the Arctic, southern European Russia, central and south-eastern Europe, and slightly lower temperatures confined to limited parts of northern and south-western Europe, northern and southern European Russia and Kazakhstan. 
-Many countries reported that 2019 was the warmest year on record, particularly Poland (since 1781) and Lithuania (since 1778), but also Ukraine (since 1881), Belarus (since 1945), Hungary (since 1901), Bulgaria (since 1930), Romania (since 1961) and Serbia (since 1951).
+In Figure~\ref{fig:metyear-avMET} a) higher temperatures in 2019 compared to the 2000-2018 average are seen over central and south-eastern Europe, and slightly lower temperatures in northern and south-western Europe, northern and southern European Russia and Usbekistan. Many countries reported that 2019 was the warmest year on record, particularly Poland (since 1781) and Lithuania (since 1778), but also Ukraine (since 1881), Belarus (since 1945), Hungary (since 1901), Bulgaria (since 1930), Romania (since 1961) and Serbia (since 1951).
 
-Despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula and Latvia, 2019 was overall a normal year in much of Europe.
 Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in northern European Russia, parts of the Nordic countries, UK and Ireland, Bay of Biscay coastal regions as well as central and southeastern Mediterranean countries.
  Below average precipitation are shown in central and eastern Europe, southern European Russia and Iberian Peninsula, Iceland and Svalbard. 
 \begin{figure}[h]
@@ -42,7 +40,7 @@ Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyea
 
 Figure~\ref{fig:temp-avMET} shows the temperatures in 2019 compared to the 2000-2018 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). 
 
-As shown in Figure Figure~\ref{fig:temp-avMET}~b) 
+As shown in Figure~\ref{fig:temp-avMET}~b)
 winter temperatures were higher than the 2000-2018 
 average in virtually all of Europe. Winter temperatures 
 were particularly high in eastern Europe including 
@@ -50,7 +48,7 @@ Russia.
  
  The first months of 2019 was overall mild in Europe and Ireland reported their warmest winter on record, particularly February was exceptionally warm. In the Iberian Peninsula, central- and eastern Europe also March was warmer than usual. The year ended extremely mild in central-east and southeastern Europe, and European Russia. Czechia, Slovakia, Hungary, Croatia, Serbia and Greece reported their warmest autumn on record and it was the warmest October in Belarus and third warmest in Georgia, the warmest November in Romania and second warmest December in European Russia.
 
-Summer was abnormally warm in central and southern Europe, but rather cold in European Russia, see Figure~\ref{fig:temp-avMET}~a). Slovakia and Czechia reported their warmest summer, and second warmest in Hungary, Austria, Slovenia and Italy and third warmest in Belgium, Luxembourg, France, Germany and Switzerland. June was the warmest month on record in many western and central European countries, and in Ukraine and Georgia records were broken. There were two distinct heatwaves for June and July across western and central Europe. In contrast, August was colder than normal in European Russia. Spring was variable throughout Europe, April was warm and the second warmest month on record in Norway and Finland. On the contrary, May was colder than normal for most countries in Europe, in Slovenia the coldest on record, except in southern and western parts of the Iberian Peninsula where a heatwave occurred in mid-May.
+Summer was warm in central and southern Europe, but rather cold in European Russia, see Figure~\ref{fig:temp-avMET}~a). Slovakia and Czechia reported their warmest summer, and second warmest in Hungary, Austria, Slovenia and Italy and third warmest in Belgium, Luxembourg, France, Germany and Switzerland. June was the warmest month on record in many western and central European countries, and in Ukraine and Georgia records were broken. There were two distinct heatwaves for June and July across western and central Europe. In contrast, August was colder than normal in European Russia. Spring was variable throughout Europe, April was warm and the second warmest month on record in Norway and Finland. On the contrary, May was colder than normal for most countries in Europe, in Slovenia the coldest on record, except in southern and western parts of the Iberian Peninsula where a heatwave occurred in mid-May.
 
 \begin{figure}[H]
   \centering
