--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -423,6 +423,8 @@ Chapters~\ref{ch:chapterStatus}--\ref{ch:Condensables}).
 \section{Revised PBL parametrisations}
 \label{sec:updateKz}
 
+The new default calculation of eddy diffusivity coefficient Kz follows the method described in \citet{troenkz}.
+
 \COMMENT{QING to UPDATE}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
