--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -28,8 +28,8 @@ Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2
 
 In Figure~\ref{fig:metyear-avMET} a) higher temperatures in 2019 compared to the 2000-2018 average are seen over central and south-eastern Europe, and slightly lower temperatures in northern and south-western Europe, northern and southern European Russia and Usbekistan. Many countries reported that 2019 was the warmest year on record, particularly Poland (since 1781) and Lithuania (since 1778), but also Ukraine (since 1881), Belarus (since 1945), Hungary (since 1901), Bulgaria (since 1930), Romania (since 1961) and Serbia (since 1951).
 
-Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in northern European Russia, parts of the Nordic countries, UK and Ireland, Bay of Biscay coastal regions as well as central and southeastern Mediterranean countries.
- Below average precipitation are shown in central and eastern Europe, southern European Russia and Iberian Peninsula, Iceland and Svalbard. 
+Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in northern European Russia, parts of the Nordic countries, UK and Ireland, Bay of Biscay coastal regions as well as central and southeastern Mediterranean countries. Below average precipitation are shown in central and eastern Europe, southern European Russia and Iberian Peninsula, Iceland and Svalbard. 
+
 \begin{figure}[h]
   \centering 
   \subfigure[$\Delta$temperature at 2m (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrSum_T2m.pdf}}
@@ -38,15 +38,13 @@ Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyea
 \label{fig:temp-avMET}
 \end{figure}
 
-Figure~\ref{fig:temp-avMET} shows the temperatures in 2019 compared to the 2000-2018 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). 
-
-As shown in Figure~\ref{fig:temp-avMET}~b)
+Figure~\ref{fig:temp-avMET} shows the temperatures in 2019 compared to the 2000-2018 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). As shown in Figure~\ref{fig:temp-avMET}~b)
 winter temperatures were higher than the 2000-2018 
 average in virtually all of Europe. Winter temperatures 
 were particularly high in eastern Europe including 
 Russia.
  
- The first months of 2019 was overall mild in Europe and Ireland reported their warmest winter on record, particularly February was exceptionally warm. In the Iberian Peninsula, central- and eastern Europe also March was warmer than usual. The year ended extremely mild in central-east and southeastern Europe, and European Russia. Czechia, Slovakia, Hungary, Croatia, Serbia and Greece reported their warmest autumn on record and it was the warmest October in Belarus and third warmest in Georgia, the warmest November in Romania and second warmest December in European Russia.
+ The first months of 2019 was overall mild in Europe and Ireland reported their warmest winter on record, particularly February was exceptionally warm. In the Iberian Peninsula, central- and eastern Europe also March was warmer than usual. The year ended extremely mild in central-east and southeastern Europe, and European Russia. Czechia, Slovakia, Hungary, Croatia, Serbia and Greece reported their warmest autumn on record. It was the warmest October in Belarus and third warmest in Georgia, the warmest November in Romania and second warmest December in European Russia.
 
 Summer was warm in central and southern Europe, but rather cold in European Russia, see Figure~\ref{fig:temp-avMET}~a). Slovakia and Czechia reported their warmest summer, and second warmest in Hungary, Austria, Slovenia and Italy and third warmest in Belgium, Luxembourg, France, Germany and Switzerland. June was the warmest month on record in many western and central European countries, and in Ukraine and Georgia records were broken. There were two distinct heatwaves for June and July across western and central Europe. In contrast, August was colder than normal in European Russia. Spring was variable throughout Europe, April was warm and the second warmest month on record in Norway and Finland. On the contrary, May was colder than normal for most countries in Europe, in Slovenia the coldest on record, except in southern and western parts of the Iberian Peninsula where a heatwave occurred in mid-May.
 
