--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -231,13 +231,13 @@ code & Number  & \multicolumn{3}{c}{Index}      & sector & SNAP \\ \cline{3-5}
 A &      01 &   1 &  1 &   1 &  Public Power  &  1 \\
 B &      02 &   3 &  3 &   2 &  Industry  & 3, 4 \\
 C &      03 &   2 &  2 &   3 &  Other Stationary Combustion & 2 \\
-D &      04 &   4 &  4 &   4 &  Fugitive & ??  \\
+D &      04 &   4 &  4 &   4 &  Fugitive & \QUERY{EXPLAIN/CHECK??}  \\
 E &      05 &   6 &  2 &   5 &  Solvents & 6 \\
 F &      06 &   7 &  2 &   6 &  Road Transport & 7 \\
 G &      07 &   8 &  2 &   7 &  Shipping & 8  \\
 H &      08 &   8 &  7 &   8 &  Aviation & 8  \\
 I &      09 &   8 &  2 &   9 &  Offroad & 8  \\
-J &     10 &   9 &  6 &  10 &  Waste & ? \\
+J &     10 &   9 &  6 &  10 &  Waste & \QUERY{EXPLAIN/CHECK?} \\
 K &     11 &  10 &  2 &  11 &  Agri - Livestock & 10 \\
 L &     12 &  10 &  2 &  12 &  Agri - Other & 10 \\
 M &     13 &   5 &  5 &  13 &  Other & 11 \\
@@ -353,6 +353,8 @@ in other cases not. In the EMEP model this choice is governed
 by the config\_emep.nml variable \verb|USES%SOILNOX_METHOD |, which can
 be set to either `Total', or `NoFert'.
 
+
+\COMMENT{Will add some words on impact of new soil emissions later.}
 
 \subsection{DMS emissions}
 \label{ssec:DMS}
