--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -16,19 +16,19 @@ The meteorological data to drive the EMEP MSC-W air quality model have been gene
 
 \subsection{Temperature and precipitation}
 The global mean temperature in 2019 was reported by the World Meteorological Organisation \citep{WMO1248:2020} as the second or third highest on record. In Europe, the annual mean temperature for 2019 was the highest on record according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-temperature}} and October 2018 to September 2019 was the second warmest over land north of 60\degrees N since records began in 1900 (Arctic Report Card 2019 \citep{Overland:ARC2019}.
-Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula and Latvia, 2019 was overall a normal year in much of Europe according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-wet-and-dry-conditions}} and BAMS (Regional climates 2019).
+Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula, Moldova and Latvia, 2019 was overall a normal year in much of Europe according to Copernicus\footnote{\url{https://climate.copernicus.eu/ESOTC/2019/european-wet-and-dry-conditions}} and BAMS (Regional climates 2019).
 
 \begin{figure*}[h]
   \centering
   \subfigure[$\Delta$temperature at 2m (2019-climavg)] {\includegraphics*[viewport=187 60 430 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_t2m_EMEP01.pdf}}
-  \subfigure[$\Delta$precipitation (2019-climavg)] {\includegraphics*[viewport=187 60 430 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_aPr_EMEP01.pdf}}
-  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Annual mean temperature at 2m [K] and b) Annual precipitation [mm]. The meteorological data have been calculated with the ECMWF-IFS model.}
+  \subfigure[$\Delta$precipitation (2019-climavg)] {\includegraphics*[viewport=187 60 430 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_aPrecPr_EMEP01.pdf}}
+  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Annual mean temperature at 2m [K] and b) Annual precipitation [\%]. The meteorological data have been calculated with the ECMWF-IFS model.}
 \label{fig:metyear-avMET}
 \end{figure*}
 
-In Figure~\ref{fig:metyear-avMET} a) higher temperatures in 2019 compared to the 2000-2018 average are seen over central and south-eastern Europe, and slightly lower temperatures in northern and south-western Europe, northern and southern European Russia and Usbekistan. Many countries reported that 2019 was the warmest year on record, particularly Poland (since 1781) and Lithuania (since 1778), but also Ukraine (since 1881), Belarus (since 1945), Hungary (since 1901), Bulgaria (since 1930), Romania (since 1961) and Serbia (since 1951).
+In Figure~\ref{fig:metyear-avMET} a) higher temperatures in 2019 compared to the 2000-2018 average are seen over central and south-eastern Europe, and slightly lower temperatures in northern and south-western Europe, northern and southern European Russia and Turkmenistan. Many countries reported that 2019 was the warmest year on record, particularly Poland (since 1781) and Lithuania (since 1778), but also Ukraine (since 1881), Belarus (since 1945), Hungary (since 1901), Bulgaria (since 1930), Romania (since 1961) and Serbia (since 1951).
 
-Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in northern European Russia, parts of the Nordic countries, UK and Ireland, Bay of Biscay coastal regions as well as central and southeastern Mediterranean countries. Below average precipitation are shown in central and eastern Europe, southern European Russia and Iberian Peninsula, Iceland and Svalbard. 
+Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in northern European Russia, parts of the Nordic countries, UK and Ireland, Bay of Biscay coastal regions as well as central and southeastern Mediterranean countries. Below average precipitation are shown in central and eastern Europe, southern European Russia, South Caucasus, Tajikistan, Kyrgyz Republic, Iberian Peninsula, Iceland and Svalbard.
 
 \begin{figure}[h]
   \centering 
@@ -38,34 +38,25 @@ Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyea
 \label{fig:temp-avMET}
 \end{figure}
 
-Figure~\ref{fig:temp-avMET} shows the temperatures in 2019 compared to the 2000-2018 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). As shown in Figure~\ref{fig:temp-avMET}~b)
-winter temperatures were higher than the 2000-2018 
-average in virtually all of Europe. Winter temperatures 
-were particularly high in eastern Europe including 
-Russia.
- 
- The first months of 2019 was overall mild in Europe and Ireland reported their warmest winter on record, particularly February was exceptionally warm. In the Iberian Peninsula, central- and eastern Europe also March was warmer than usual. The year ended extremely mild in central-east and southeastern Europe, and European Russia. Czechia, Slovakia, Hungary, Croatia, Serbia and Greece reported their warmest autumn on record. It was the warmest October in Belarus and third warmest in Georgia, the warmest November in Romania and second warmest December in European Russia.
+Figure~\ref{fig:temp-avMET} shows the temperatures in 2019 compared to the 2000-2018 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). Summer was overall warm in central and southern Europe, and cold in European Russia, see Figure~\ref{fig:temp-avMET}~a). Spring was variable throughout Europe, April was warm and the second warmest month on record in Norway and Finland. On the contrary, May was colder than normal for most countries in Europe, in Slovenia the coldest on record, except in southern and western parts of the Iberian Peninsula where a heatwave occurred in mid-May. Slovakia and Czechia reported their warmest summer, and second warmest in Hungary, Austria, Slovenia and Italy and third warmest in Belgium, Luxembourg, France, Germany and Switzerland. June was the warmest month on record in many western and central European countries, and in Ukraine and Georgia records were broken. There were two distinct heatwaves for June and July across western and central Europe. In contrast, August was colder than normal in European Russia.
 
-Summer was warm in central and southern Europe, but rather cold in European Russia, see Figure~\ref{fig:temp-avMET}~a). Slovakia and Czechia reported their warmest summer, and second warmest in Hungary, Austria, Slovenia and Italy and third warmest in Belgium, Luxembourg, France, Germany and Switzerland. June was the warmest month on record in many western and central European countries, and in Ukraine and Georgia records were broken. There were two distinct heatwaves for June and July across western and central Europe. In contrast, August was colder than normal in European Russia. Spring was variable throughout Europe, April was warm and the second warmest month on record in Norway and Finland. On the contrary, May was colder than normal for most countries in Europe, in Slovenia the coldest on record, except in southern and western parts of the Iberian Peninsula where a heatwave occurred in mid-May.
+As shown in Figure~\ref{fig:temp-avMET}~b) winter temperatures were higher than the 2000-2018 average in virtually all of Europe. Winter temperatures were particularly high in eastern Europe including Russia. The first months of 2019 was overall mild in Europe and Ireland reported their warmest winter on record, particularly February was exceptionally warm. In the Iberian Peninsula, central- and eastern Europe also March was warmer than usual. The year ended extremely mild in central-east and southeastern Europe, and European Russia. Czechia, Slovakia, Hungary, Croatia, Serbia and Greece reported their warmest autumn on record. It was the warmest October in Belarus and third warmest in Georgia, the warmest November in Romania and second warmest December in European Russia.
 
 \begin{figure}[H]
   \centering
-  \subfigure[$\Delta$precipitation (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrSum_APr.pdf}}
-  \subfigure[$\Delta$precipitation (OctMar 2019-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrVin_APr.pdf}}
-  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Summer (April-September) precipitation [mm], b) winter (January-March and October-December) precipitation [mm]. The meteorological data have been calculated with the ECMWF-IFS model.} 
+  \subfigure[$\Delta$precipitation (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrSum_APrecPr.pdf}}
+  \subfigure[$\Delta$precipitation (OctMar 2019-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrVin_APrecPr.pdf}}
+  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Summer (April-September) precipitation [\%], b) winter (January-March and October-December) precipitation [\%]. The meteorological data have been calculated with the ECMWF-IFS model.} 
 \label{fig:prec-avMET}
 \end{figure}
 
-Annual precipitation was generally below normal for south Caucasus, central-, eastern- and southwestern Europe, and wetter than normal in western parts of western Europe, southern parts of southeastern Europe and in northern European Russia, but some local seasonal heavy precipitation events, resulting in above-normal averages as well for individual periods and countries (see precipitation in winter and summer in 2019 compared to the 2000-2018 average in Figure~\ref{fig:prec-avMET}). 
+Particularly the dry conditions in east Europe and South Caucasus is shown in Figure~\ref{fig:prec-avMET}) of winter and summer precipitation in 2019 compared to the 2000-2018 average. But also local seasonal heavy precipitation events, resulting in above-normal averages as well for individual periods and countries. 
 
-For April through September  Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland and southern Norway and the central Mediterranean countries  In Latvia and Belarus, April was the driest month on record, and also European Russia was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and eastern and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
+For April through September  Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of UK, Ireland, southern Norway and the central Mediterranean countries. In Latvia and Belarus, April was the driest month on record, and also European Russia was extremely dry. In spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported its wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Eastern Norway was extremely wet while western Norway was very dry. Denmark reported its wettest autumn on record and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
 
-As shown in Figure~\ref{fig:prec-avMET}~b)
- the 2019 winter months ((January-March and October-December) precipitation were wetter than 
-than the 2000-2018 average in most of Europe. 
-% The winter season was very wet in northern European %Russia, Moldova, southern Norway, Czechia, Greece and %Turkey, 
-However, southern parts of European Russia, and the Caucasus region/countries ...
- western Norway, Ireland, southern France, Spain and Portugal. January was wetter than normal in central Europe, European Russia, Moldova and Spain, but oppositely it was the driest February in Spain in the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
+As shown in Figure~\ref{fig:prec-avMET}~b) the 2019 winter months (January-March and October-December) precipitation were wetter than the 2000-2018 average in most of Europe, except drier conditions in western Norway, southern Iberian Peninsula, southeastern Europe, southern European Russia, South Caucasus, Kyrgyz Rpublig
+% The winter season was very wet in northern European %Russia, Moldova, southern Norway, Czechia, Greece and % southern parts of European Russia, and the Caucasus region/countries ...
+ western Norway, Ireland, southern France, Spain and Portugal. January was wetter than normal in central Europe, European Russia, Greece, Moldova and Spain. However in Spain it was the driest February in the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
 
 
 \section{Measurement network 2018 WENCHE/NILU TO CHANGE} 
