restored lost refs

--- a/RefsUpdates.bib
+++ b/RefsUpdates.bib
@@ -18,3 +18,55 @@ NUMBER = {2},
 PAGES = {341--364},
 DOI = {10.5194/acp-10-341-2010}
 }
+
+@misc{GranierCAMS2019,
+  author =        {Granier, C. and Darras, S. and Denier van der Gon, H. and
+                   Doubalova, J. and Elguindi, N. and Galle, B. and
+                   Gauss, M. and Guevara, M. and Jalkanen, J.-P. and
+                   Kuenen, J. and Liousse, C. and Quack, B. and
+                   Simpson, D. and Sindelarova, K.},
+  title =         {The Copernicus Atmosphere Monitoring Service global
+                   and regional emissions (April 2019 version)},
+  year =          {2019},
+  doi =           {10.24380/d0bn-kx16},
+  url =           {https://atmosphere.copernicus.eu/sites/default/files/2019-
+                  06/cams_emissions_general_document_apr2019_v7.pdf},
+}
+
+@incollection{Guidebook2019:3D,
+  author =        {Nicholas Hutchings and J. Webb and Barbara Amon},
+  booktitle =     {EMEP/EEA air pollutant emission inventory guidebook
+                   2019},
+  publisher =     {EMEP/European Environment Agency},
+  title =         {3.D Crop production and agricultural soils},
+  year =          {2019},
+  url =           {https://www.eea.europa.eu/publications/emep-eea-guidebook-
+                  2019/part-b-sectoral-guidance-chapters/4-agriculture/3-d-
+                  crop-production-and},
+}
+
+@Article{SimpsonDarras:2021,
+ AUTHOR = {Simpson, D. and Darras, S.},
+ TITLE = {{Global soil NO emissions for Atmospheric Chemical Transport Modelling: CAMS-GLOB-SOIL v2.2}},
+ JOURNAL = {Earth System Science Data Discussions},
+ VOLUME = {2021},
+ YEAR = {2021},
+ PAGES = {1--35},
+ URL = {https://essd.copernicus.org/preprints/essd-2021-221/},
+ DOI = {10.5194/essd-2021-221}
+}
+
+@Article{SteinkampLawrence2011,
+  author    = {Steinkamp, J. and Lawrence, M. G.},
+  journal   = acp,
+  title     = {{Improvement and evaluation of simulated global biogenic soil NO
+                 emissions in an AC-GCM}},
+  year      = 2011,
+  number    = 12,
+  pages     = {6063--6082},
+  volume    = 11,
+  doi       = {10.5194/acp-11-6063-2011},
+  url       = {http://www.atmos-chem-phys.net/11/6063/2011/}
+}
+
+
