--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -159,7 +159,7 @@ These plots indicate good agreement between the modelled and measured ozone metr
 \label{fig:indicatorPOD}
 \end{figure}
 
-It should be noted that the O$_3$ metrics such as AOT40 are very sensitive to the calculation of vertical O$_3$ gradients between the middle of the surface layer and the 3m height used for comparison with measurements \citep{Tuovinen:EP2007} and thus more difficult to compare with measurement data than, e.g., the mean daily maximum. Indeed, the formulation we use \citep{Simpson_et_al:EMEP} is probably better suited to a lowest model layer of 90m thickness (since we equate the centre of this, ca. 45m, with a `blending-height') than to a lowest model layer of 50m thickness (as used throughout this report). 
+It should be noted that the O$_3$ metrics such as AOT40 are very sensitive to the calculation of vertical O$_3$ gradients between the middle of the surface layer and the 3m height used for comparison with measurements \citep{Tuovinen:EP2007} and thus more difficult to compare with measurement data than, e.g., the mean daily maximum. Indeed, the formulation we use \citep{Simpson:EMEP2012} is probably better suited to a lowest model layer of 90m thickness (since we equate the centre of this, ca. 45m, with a `blending-height') than to a lowest model layer of 50m thickness (as used throughout this report). 
 The modelled POD$_1$ pattern differs from the other metrics reflecting the influence of additional parameters such as plant physiology, soil moisture etc., and is a metric more indicative of the direct impact of ozone on vegetation than, e.g., AOT40. The POD$_1$ field could, however, not be validated by the EMEP ozone measurement data alone. 
 
 SOMO35 is an indicator for health impacts recommended by WHO, and the results given in Figures~\ref{fig:indicators_emep} and \ref{fig:indicators_airbase} indicate that the health risk associated with surface ozone increased towards southern Europe. Highest levels are seen in the Mediterranean area and Northern Italy. SOMO35 is a health risk indicator without any specific threshold or limit value.
